--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -1,81 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:orientation="vertical">
 
-
-    <RelativeLayout
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nsScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
 
-        <android.support.v4.widget.NestedScrollView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/nsScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fillViewport="true">
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:id="@+id/task_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.v7.widget.RecyclerView
-                    android:background="@color/divider_color_lighter"
-                    android:id="@+id/alert_list_view"
-                    android:paddingTop="@dimen/activity_vertical_margin"
-                    android:paddingBottom="@dimen/activity_vertical_margin_half"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/activity_vertical_margin"
-                    android:paddingTop="@dimen/activity_vertical_margin"
-                    android:gravity="left"
-                    android:text="@string/my_tasks"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
-                    tools:ignore="RtlHardcoded" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/tasks_list_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-
-        </android.support.v4.widget.NestedScrollView>
-
-        <android.support.v7.widget.CardView
-            app:cardElevation="6dp"
-            app:cardCornerRadius="0dp"
-            android:layout_alignParentTop="true"
-            android:id="@+id/llPinned"
-            android:visibility="gone"
+        <LinearLayout
             android:orientation="vertical"
+            android:id="@+id/task_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <android.support.v7.widget.RecyclerView
+                android:visibility="gone"
+                android:background="@color/divider_color_lighter"
+                android:id="@+id/alert_list_view"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin_half"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/divider_color"/>
             <TextView
-                android:background="@color/white"
-                android:id="@+id/tvMyTasksPinned"
+                android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/activity_vertical_margin"
@@ -85,19 +42,42 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 tools:ignore="RtlHardcoded" />
-            <View
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/tasks_list_view"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/divider_color"/>
-        </android.support.v7.widget.CardView>
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <android.support.v7.widget.CardView
+        app:cardElevation="6dp"
+        app:cardCornerRadius="0dp"
+        android:layout_alignParentTop="true"
+        android:id="@+id/llPinned"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:background="@color/white"
+            android:id="@+id/tvMyTasksPinned"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:gravity="left"
+            android:text="@string/my_tasks"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            tools:ignore="RtlHardcoded" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider_color"/>
+    </android.support.v7.widget.CardView>
 
 
-    </RelativeLayout>
-
-    <!-- Include Home Default Body -->
-    <!--<include-->
-    <!--android:id="@+id/task_empty"-->
-    <!--layout="@layout/empty_adapter" />-->
-
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
