--- a/Alert/app/src/main/res/layout/nav_header_main.xml
+++ b/Alert/app/src/main/res/layout/nav_header_main.xml
@@ -33,8 +33,7 @@
             android:id="@+id/tvUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
-            android:text="Luis Vidal" />
+            android:layout_marginTop="@dimen/nav_header_vertical_spacing" />
 
         <TextView
             android:id="@+id/tvDepartment"
