--- a/Alert/app/src/main/res/layout/fragment_min_preparedness.xml
+++ b/Alert/app/src/main/res/layout/fragment_min_preparedness.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/main_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,7 +9,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/action_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAddAPA"
@@ -19,10 +21,5 @@
         app:backgroundTint="@color/btnColor"
         app:srcCompat="@drawable/fab_add"
         android:layout_alignParentEnd="true" />
-
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
 </RelativeLayout>
