--- a/Alert/app/src/main/res/layout/fragment_adv_preparedness.xml
+++ b/Alert/app/src/main/res/layout/fragment_adv_preparedness.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/main_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/adv_pager"
+        android:id="@+id/action_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddAPA"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/space_16"
+        app:backgroundTint="@color/btnColor"
+        app:srcCompat="@drawable/fab_add"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
