--- a/Alert/app/src/main/res/layout/activity_programme_results.xml
+++ b/Alert/app/src/main/res/layout/activity_programme_results.xml
@@ -22,6 +22,13 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_marginTop="@dimen/double_margin"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <android.support.v4.widget.NestedScrollView
             android:layout_below="@+id/toolbar_layout"
             android:id="@+id/scroller"
@@ -43,6 +50,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:id="@+id/noResults"
+                    android:visibility="gone"
                     android:layout_below="@+id/tvResultsFor"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:layout_marginBottom="@dimen/activity_vertical_margin"
