--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -1,184 +1,40 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="org.alertpreparedness.platform.v2.dashboard.home.HomeFragment">
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nsScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fillViewport="true">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/task_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/networkTitle"
-                android:visibility="gone"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:background="@color/divider_color_lighter"
-                android:textColor="@color/grey_title"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:text="@string/network"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:visibility="gone"
-                android:background="@color/divider_color_lighter"
-                android:id="@+id/rvNetworkAlerts"
-                android:paddingTop="@dimen/activity_vertical_margin_half"
-                android:paddingBottom="@dimen/activity_vertical_margin_half"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/countryTitle"
-                android:visibility="gone"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_horizontal_margin_half"
-                android:background="@color/divider_color_lighter"
-                android:textColor="@color/grey_title"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:text="@string/country"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:visibility="gone"
-                android:background="@color/divider_color_lighter"
-                android:id="@+id/alert_list_view"
-                android:paddingTop="@dimen/activity_vertical_margin_half"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/divider_color"/>
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:gravity="left"
-                android:text="@string/my_tasks"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                tools:ignore="RtlHardcoded" />
-
-            <TextView
-                android:id="@+id/countryTasks"
-                android:visibility="visible"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_horizontal_margin_half"
-                android:background="@android:color/transparent"
-                android:textColor="@color/grey_title"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:text="@string/country"
-                android:layout_marginBottom="@dimen/activity_vertical_margin_half"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/tasks_list_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/networkTasks"
-                android:visibility="gone"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_horizontal_margin_half"
-                android:paddingBottom="@dimen/activity_vertical_margin_half"
-                android:background="@android:color/transparent"
-                android:textColor="@color/grey_title"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:text="@string/network"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:visibility="gone"
-                android:layout_marginBottom="@dimen/activity_vertical_margin_half"
-                android:layout_marginTop="@dimen/activity_vertical_margin_half"
-                android:id="@+id/network_tasks"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/noNetworkTasks"
-                android:visibility="gone"
-                android:background="@color/divider_color_lighter"
-                android:padding="@dimen/activity_vertical_margin"
-                android:textColor="@color/grey_title"
-                android:textSize="14sp"
-                android:textAlignment="center"
-                android:text="@string/no_network_tasks"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
-
-    <androidx.cardview.widget.CardView
-        app:cardElevation="6dp"
-        app:cardCornerRadius="0dp"
-        android:layout_alignParentTop="true"
-        android:id="@+id/llPinned"
-        android:visibility="gone"
-        android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <RelativeLayout
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvAlerts"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_alignParentLeft="true"
-                android:background="@color/white"
-                android:id="@+id/tvMyTasksPinned"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:gravity="left"
-                android:text="@string/my_tasks"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                tools:ignore="RtlHardcoded" />
-            <TextView
-                android:visibility="gone"
-                android:textColor="@color/grey_title"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:id="@+id/taskTypeTitle"
-                android:layout_margin="@dimen/activity_vertical_margin"
-                android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <View
+        <TextView
+            android:id="@+id/tvMyTasks"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/divider_color"/>
-    </androidx.cardview.widget.CardView>
+            android:layout_height="wrap_content"
+            android:text="@string/my_tasks"
+            app:layout_constraintTop_toBottomOf="@id/rvAlerts"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="8dp"/>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvMyTasks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tvMyTasks"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-</RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
