--- a/Alert/app/src/main/res/layout/content_minimum.xml
+++ b/Alert/app/src/main/res/layout/content_minimum.xml
@@ -36,7 +36,7 @@
                             android:layout_gravity="center_vertical"
                             android:layout_width="16dp"
                             android:layout_height="16dp"
-                            app:srcCompat="@drawable/ic_in_progress" />
+                            app:srcCompat="@drawable/preparedness_amber" />
 
                         <TextView
                             android:id="@+id/tvStatus"
