--- a/Alert/app/src/main/res/menu/menu_drawer.xml
+++ b/Alert/app/src/main/res/menu/menu_drawer.xml
@@ -33,7 +33,7 @@
         <item
             android:orderInCategory="1"
             android:id="@+id/nav_settings"
-            android:title="@string/nav_settings" />
+            android:title="@string/nav_logout" />
     </group>
 
     <!--<item android:title="">-->
