--- a/Alert/app/src/main/res/layout/item_programme.xml
+++ b/Alert/app/src/main/res/layout/item_programme.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:padding="@dimen/activity_vertical_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="@dimen/activity_vertical_margin">
 
     <TextView
         android:textColor="@color/grey_title"
@@ -12,7 +12,7 @@
         android:id="@+id/title"
         android:textStyle="bold"
         android:textSize="14dp"
-        android:text="Shelter, Health"
+        tools:text="Shelter, Health"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -22,7 +22,7 @@
         android:id="@+id/desc"
         android:textStyle="normal"
         android:textSize="14dp"
-        android:text="Mobile Medical Support to Flood Affected Families"
+        tools:text="Mobile Medical Support to Flood Affected Families"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -30,7 +30,7 @@
         android:textSize="12dp"
         android:layout_marginBottom="4dp"
         android:textColor="@color/light_blue"
-        android:text="To: Flood Affected families who have no access to medical facilities"
+        tools:text="To: Flood Affected families who have no access to medical facilities"
         android:id="@+id/to"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -39,14 +39,14 @@
         android:textSize="12dp"
         android:layout_marginBottom="10dp"
         android:textColor="@color/light_blue"
-        android:text="In: Philippines, Laguna"
+        tools:text="In: Philippines, Laguna"
         android:id="@+id/in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:layout_marginBottom="4dp"
-        android:text="From: 28/05/12 - 05/11/18"
+        tools:text="From: 28/05/12 - 05/11/18"
         android:textColor="@color/hintGray"
         android:id="@+id/from"
         android:layout_width="match_parent"
