--- a/Alert/app/src/main/res/layout/risk_hazard_item_view.xml
+++ b/Alert/app/src/main/res/layout/risk_hazard_item_view.xml
@@ -6,20 +6,15 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
-        <FrameLayout
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/civHazard"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:background="@drawable/bg_circle">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/civHazard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_launcher"/>
-
-        </FrameLayout>
+            android:background="@drawable/bg_circle"
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/tvHazardName"
